force-app/main/default/objects/custom_create86__c/custom_create86__c.object-meta.xml
<CustomObject>
    <label>Custom created object86</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects86</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>