force-app/main/default/objects/custom_create86__c/fields/custom_create_86field510__c.field-meta.xml
<CustomField>
    <fullName>custom_create_86field510__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 86field510</label>
    <type>Checkbox</type>
</CustomField>