force-app/main/default/objects/custom_create86__c/fields/custom_create_86field606__c.field-meta.xml
<CustomField>
    <fullName>custom_create_86field606__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 86field606</label>
    <type>Checkbox</type>
</CustomField>